--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -9,6 +9,7 @@
                             (click)="onMove(j + i)"
                             *ngFor="let j of [0, 1, 2]">{{board[j + i]}}
 
+                            first change2
 
                         </div>
                     </div>
