--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -8,8 +8,11 @@
                             [ngClass]="{'cursor-pointer': !isGameOver, 'blue': winner?.cells?.includes(j + i)}"
                             (click)="onMove(j + i)"
                             *ngFor="let j of [0, 1, 2]">{{board[j + i]}}
-
+                            whatever sasdasdad
                             first change2
+                            bbusadsa
+                            cczxc
+
 
                         </div>
                     </div>
